@@ -1,3 +1,7 @@
+2001-03-22  Alan Modra  <alan@linuxcare.com.au>
+
+	* i386.h (i386_optab): Add paddq, psubq.
+
 2001-03-19  Alan Modra  <alan@linuxcare.com.au>
 
 	* i386.h (REGNAM_AL, REGNAM_AX, REGNAM_EAX): Define.
